fix spacing for mobile

--- a/css/cabildos.css
+++ b/css/cabildos.css
@@ -327,4 +327,12 @@ h5 {
   .node-label {
     font-size: 10px;
   }
+
+  .offset-2 {
+    margin-left: 10px;
+  }
+
+  .tema-title, .tema-description, .cloud-div {
+    margin-left: 12px;
+  }
 }
